--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				<div class="direccion">
 					<p class="calle">2915 Primrose Lane<br />Anaheim, CA 92806</p>
 					<p class="telefono">(503) 400-5479</p>
-					<p class="correo">contacto [at] correo.com</p>
+					<p class="correo">contacto@correo.com</p>
 				</div>
 				<div class="horarios">
 					<h4>Horarios</h4>
