--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<p class="telefono">(503) 400-5479</p>
 					<p class="correo">contacto@correo.com</p>
 				</div>
-				<div class="horarios">
+				<div class="horarios" id="horarios">
 					<h4>Horarios</h4>
 					<p class="entre-semana">Lunes a Viernes<br />8:00am - 9:00pm</p>
 					<p class="fin-semana">Sabados y Domingos<br />11:00am - 11:00pm</p>
