--- a/index.html
+++ b/index.html
@@ -155,5 +155,6 @@
 	<script src="js/jquery-1.12.3.min.js"></script>
 	<script src="js/parallax.js"></script>
 	<script src="js/efectos.js"></script>
+	<script src="js/ofertas.js"></script>
 </body>
 </html>
