--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,300italic,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="manifest" href="manifest.json">
 	<title>The Chill Spot</title>
 </head>
 <body>
@@ -152,6 +153,17 @@
 		</div>
 	</footer>
 
+	<!-- <script>
+		if ('serviceWorker' in navigator) {
+		  window.addEventListener('load', () => {
+			navigator.serviceWorker.register('/service-worker.js').then((registration) => {
+			  console.log('Service Worker registrado con éxito:', registration);
+			}).catch((error) => {
+			  console.log('Error al registrar el Service Worker:', error);
+			});
+		  });
+		}
+	  </script> -->
 	<script src="js/jquery-1.12.3.min.js"></script>
 	<script src="js/parallax.js"></script>
 	<script src="js/efectos.js"></script>
