--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
+      navigator.serviceWorker.register('sw.js')
         .then(function(registration) {
           console.log('Service Worker registrado:', registration);
         })
