--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/estilos.css" />
   <link rel="manifest" href="manifest.json" />
   <title>The Chill Spot</title>
+  <script type="module" src="firebase-init.js"></script>
 </head>
 
 <body>
