--- a/index.html
+++ b/index.html
@@ -205,11 +205,14 @@
       </div>
     </footer>
 
-    <script>
+   <!-- <<script>
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker.register("sw.js");
       }
-    </script>
+    </script> -->
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/jquery-1.12.3.min.js"></script>
     <script src="js/parallax.js"></script>
     <script src="js/efectos.js"></script>
