--- a/index.html
+++ b/index.html
@@ -205,14 +205,73 @@
       </div>
     </footer>
 
+
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("sw.js");
+      }
+    </script>
+
+    <!-- Cargar los scripts de Firebase y tu código JS -->
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+      import { getMessaging, getToken, onMessage } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging.js";
+
+      // Configuración de Firebase
+      const firebaseConfig = {
+        apiKey: "AIzaSyCLATOoJaHm1ik6fCWHJYAkPgIhMQ5B5O4",
+        authDomain: "the-chill-spot-b94ae.firebaseapp.com",
+        projectId: "the-chill-spot-b94ae",
+        storageBucket: "the-chill-spot-b94ae.firebasestorage.app",
+        messagingSenderId: "519997067329",
+        appId: "1:519997067329:web:023cffe155db50c797f6c0",
+        measurementId: "G-NS2XWVYFF2"
+      };
+
+      // Inicializar Firebase
+      const app = initializeApp(firebaseConfig);
+      const messaging = getMessaging(app);
+
+      // Función para obtener el token de FCM
+      function obtenerToken() {
+        Notification.requestPermission().then(permission => {
+          if (permission === 'granted') {
+            console.log('Permiso concedido');
+            
+            getToken(messaging, { vapidKey: 'BGvxRdsdfnqOKKjJCOnLNe6Fc7xJdn9pxhXnxOKJNWyuzOGsyH9715HfZlP254QaIxm4VpKpYI4AjvgeUjbWYtY' }).then((currentToken) => {
+              if (currentToken) {
+                console.log('Token de FCM:', currentToken);
+              } else {
+                console.log('No se pudo obtener el token');
+              }
+            }).catch((err) => {
+              console.log('Error al obtener el token:', err);
+            });
+          } else {
+            console.log('Permiso denegado');
+          }
+        });
+      }
+
+      // Manejar notificaciones en primer plano
+      onMessage(messaging, (payload) => {
+        console.log('Mensaje recibido en primer plano:', payload);
+      });
+
+      // Evento del botón de suscripción a notificaciones
+      document.getElementById('btn-notificar').addEventListener('click', () => {
+        obtenerToken();
+      });
+    </script>
+
    <!-- <<script>
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker.register("sw.js");
       }
     </script> -->
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging.js"></script>
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script> -->
     <script src="js/jquery-1.12.3.min.js"></script>
     <script src="js/parallax.js"></script>
     <script src="js/efectos.js"></script>
