--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", function () {
-          navigator.serviceWorker.register("/ChillSpot/service-worker.js").then(
+          navigator.serviceWorker.register("/service-worker.js").then(
             function (registration) {
               console.log(
                 "ServiceWorker registered with scope:",
