--- a/index.html
+++ b/index.html
@@ -205,48 +205,33 @@
       </div>
     </footer>
 
+    <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
     <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", function () {
-          navigator.serviceWorker.register("/service-worker.js").then(
-            function (registration) {
-              console.log(
-                "ServiceWorker registered with scope:",
-                registration.scope
-              );
-            },
-            function (err) {
-              console.log("ServiceWorker registration failed:", err);
-            }
-          );
-        });
-        Notification.requestPermission().then(function (permission) {
-          if (permission === "granted") {
-            console.log("Permiso concedido para notificaciones.");
-          }
-        });
-      }
-    </script>
-    <script src="https://cdn.onesignal.com/sdks/OneSignalSDKWorker.js" defer></script>
-    <script>
-      window.OneSignalDeferred = window.OneSignalDeferred || [];
-      OneSignalDeferred.push(async function(OneSignal) {
-        try {
-          await OneSignal.init({
-            appId: "b559ed99-08d2-4807-a77b-5ed0c9f4eeae",
-          });
-    
-          OneSignal.push(() => {
-            OneSignal.getNotificationPermission().then((permission) => {
-              if (permission === "granted") {
-                console.log("Permiso concedido para notificaciones.");
-              }
+        if ("serviceWorker" in navigator) {
+            window.addEventListener("load", async function () {
+                try {
+                    const registration = await navigator.serviceWorker.register("/service-worker.js");
+                    console.log("ServiceWorker registered with scope:", registration.scope);
+                    
+                    // Aquí inicializamos OneSignal después de registrar el Service Worker
+                    window.OneSignal = window.OneSignal || [];
+                    OneSignal.push(function() {
+                        OneSignal.init({
+                            appId: "b559ed99-08d2-4807-a77b-5ed0c9f4eeae",
+                        });
+
+                        // Solicitar permiso para recibir notificaciones
+                        OneSignal.getNotificationPermission().then(function(permission) {
+                            if (permission === "granted") {
+                                console.log("Permiso concedido para notificaciones.");
+                            }
+                        });
+                    });
+                } catch (err) {
+                    console.error("ServiceWorker registration failed:", err);
+                }
             });
-          });
-        } catch (error) {
-          console.error("Error al inicializar OneSignal:", error);
         }
-      });
     </script>
     <script src="js/jquery-1.12.3.min.js"></script>
     <script src="js/parallax.js"></script>
