--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="css/estilos.css" />
     <link rel="manifest" href="manifest.json" />
+    <script type="module" src="app.js"></script>
     <title>The Chill Spot</title>
   </head>
 
@@ -197,6 +198,12 @@
       </section>
     </section>
 
+    <button id="toggleButton">Token</button>
+    <section class="token-display">
+        <h2>Token de Firebase Messaging</h2>
+        <p id="firebase-token">Obteniendo token...</p>
+    </section>
+
     <footer>
       <div class="contenedor">
         <div class="copyright">
@@ -233,7 +240,6 @@
 
       askNotificationPermission();
     </script>
-    <script src="js/app.js"></script>
     <script src="js/jquery-1.12.3.min.js"></script>
     <script src="js/parallax.js"></script>
     <script src="js/efectos.js"></script>
