--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
       </section>
     </section>
 
-    <button id="toggleButton">Token</button>
+    <!-- <button id="toggleButton">Token</button>
     <section class="token-display">
         <h2>Token de Firebase Messaging</h2>
         <p id="firebase-token">Obteniendo token...</p>
-    </section>
+    </section> -->
 
     <footer>
       <div class="contenedor">
